fixed scaling, wording, README

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
     </style>
+    <link rel="icon" type="image/png" href="./assets/iibiclean.png">
     <title>iiBi</title>
 </head>
 
