--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <p>   
                         Please select a stock by clicking any of the icons on the left.
                     </p>
+                    <p> You can hover over the graph to display stock data on the graph</p>
                     <p>
                         Each logo will load the respective company's stock performance over the year. 
                     </p>
