--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                    <p id="API">
                        The company icons are provided by Clearbit API!
                    </p>
+                   <p id="API">
+                       Disclaimer: I am not a financial advisor, everything here is used for entertainment purposes only!
+                   </p>
                 </p>
             </div class="welcomeBoxText">
         </div>
