fixed data from api

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <img src="//logo.clearbit.com/amctheatres.com" onclick="makeChart('AMC')" class="logo">
             <img src="//logo.clearbit.com/AMD.com" onclick="makeChart('AMD')" class="logo">
             <img src="//logo.clearbit.com/amazon.com" onclick="makeChart('AMZN')" class="logo">
-            <img src="//logo.clearbit.com/DIDIGLOBAL.com" onclick="makeChart('DIDI')" class="logo">
+            <img src="//logo.clearbit.com/citiuspharma.com" onclick="makeChart('CTXR')" class="logo">
             <img src="//logo.clearbit.com/DOMINOS.com" onclick="makeChart('DPZ')" class="logo">
             <img src="//logo.clearbit.com/dexcom.com" onclick="makeChart('DXCM')" class="logo">
             <img src="//logo.clearbit.com/FACEBOOK.COM" onclick="makeChart('FB')" class="logo">
