--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <meta property="og:title" content="iiBi" />
+    <meta property="og:image" content="./assets/metass.png" />
+    <meta property="og:description" content="Data visualization of a selection of stocks using D3 and Js." />
+    <meta property="og:url" content="https://AlexDoes.github.io/iibi" />
     <script src="https://d3js.org/d3.v6.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
